--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="undeline"></div>
             </div>
 
-            <input type="submit" value="Continue">
+            <input type="submit" id="botao-continue" value="Continue">
                 
             <div class="footer">
                 <span>Or Connect With Social Media</span>
